--- a/package.json
+++ b/package.json
@@ -1,31 +1,44 @@
 {
-  "name": "shohjahonportfolio",
+  "proxy": "https://urolov-dev-connector.herokuapp.com",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "v14.15.0",
+    "npm": "7.9.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "http-proxy-middleware": "^0.19.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
-    "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-paginate": "^7.1.3",
+    "react-hook-form": "^7.15.3",
+    "react-icons": "^4.3.1",
+    "react-moment": "^1.1.1",
+    "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-typing-effect": "^2.0.5",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +57,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://shohjahon-backend.herokuapp.com"
+  }
 }
